fixing incorrect note, adjusting align items

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -90,6 +90,7 @@ ul {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
     grid-gap: 0 2rem;
+    align-items: end;
     li {
       max-width: none;
     }
